--- a/cms/src/app/header.component.html
+++ b/cms/src/app/header.component.html
@@ -11,11 +11,12 @@
         <li><a href="#" (click)="onSelect('Contacts')">Contacts</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
+        <li class="dropdown" cmsAppDropdown>
           <a href="#" class="dropdown-toggle" role="button">User<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Save Data</a></li>
-            <li><a href="#">Fetch Data</a></li>
+            <li><a href="#">Login</a></li>
+            <li><a href="#">Other</a></li>
+            <li style="margin-top: 1rem"><a href="#">Logout</a></li>
           </ul>
         </li>
       </ul>
