--- a/cms/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/cms/src/app/contacts/contact-detail/contact-detail.component.html
@@ -21,8 +21,14 @@
       <div class="col-xs-5">
         <div class="row">
           <div class="col-xs-12" style="margin-top: 30px">
-            <a href="#" class="btn btn-primary btn-md pull-left">Edit</a>
-            <a href="#" class="btn btn-danger btn-md pull-right">Delete</a>
+            <a
+              class="btn btn-primary btn-md pull-left"
+              [routerLink]="['edit']"
+              >Edit</a>
+            <a
+              class="btn btn-danger btn-md pull-right"
+              (click)="onDelete()"
+              >Delete</a>
           </div>
         </div>
       </div>
