--- a/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -2,7 +2,11 @@
   <div class="panel-heading">
     <h3 class="panel-title">
       <strong style="font-size: 1.5em">Contacts</strong>
-      <a href="#" class="btn btn-success btn-md pull-right" style="color: white">New Contact</a>
+      <a
+        class="btn btn-success btn-md pull-right"
+        style="color: white"
+        [routerLink]="['new']"
+        >New Contact</a>
     </h3>
   </div>
   <div class="panel-body">
@@ -11,7 +15,6 @@
         <cms-contact-item
           *ngFor="let contactElement of contacts"
           [contact]="contactElement"
-          (click)="onSelected(contactElement)"
         ></cms-contact-item>
       </div>
     </div>
