--- a/cms/src/app/documents/document-detail/document-detail.component.html
+++ b/cms/src/app/documents/document-detail/document-detail.component.html
@@ -3,9 +3,17 @@
     <div class="row pad-all">
       <h4 class="title margin-left-right">{{ document?.name }}</h4>
       <div class="row pull-right margin-left-right">
-        <a class="btn btn-primary" style="margin-right: 5px">View</a>
-        <a class="btn btn-info" style="margin-right: 5px">Edit</a>
-        <a class="btn btn-danger">Delete</a>
+        <a
+          class="btn btn-primary"
+          style="margin-right: 5px"
+          (click)="onView()"
+          >View</a>
+        <a
+          class="btn btn-info"
+          style="margin-right: 5px"
+          [routerLink]="['edit']"
+          >Edit</a>
+        <a class="btn btn-danger" (click)="onDelete()">Delete</a>
       </div>
     </div>
   </div>
