Week 8: Final commit. Added all edit component content, all validation, and all CDK drag and drop code. Was not able to get the contact edit component to accept dragged content.

--- a/cms/src/app/contacts/contact-item/contact-item.component.html
+++ b/cms/src/app/contacts/contact-item/contact-item.component.html
@@ -1,13 +1,10 @@
-<a
-  class="list-group-item clearfix"
-  [routerLink]="[contact.id]"
-  routerLinkActive="active">
+<a class="list-group-item clearfix" [routerLink]="[contact.id]" routerLinkActive="active">
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ contact.name }}</h4>
   </div>
   <span class="pull-right">
     <img
-      [src]="contact.imageUrl"
+      [src]="contact.imageUrl !== ' ' ? contact.imageUrl : '../../assets/images/fredFlintstone.png'"
       alt="{{ contact.name }}"
       class="img-responsive"
       style="max-height: 50px"
