--- a/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -12,10 +12,16 @@
   <div class="panel-body">
     <div class="row">
       <div class="col-xs-12">
-        <cms-contact-item
-          *ngFor="let contactElement of contacts"
-          [contact]="contactElement"
-        ></cms-contact-item>
+        <div cdkDropList id="contactList" [cdkDropListData]="contacts">
+          <div
+            *ngFor="let contact of contacts"
+            cdkDrag
+            [cdkDragData]="contact"
+            [cdkDragDisabled]="!contact"
+          >
+            <cms-contact-item [contact]="contact"></cms-contact-item>
+          </div>
+        </div>
       </div>
     </div>
   </div>
