--- a/cms/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/cms/src/app/contacts/contact-detail/contact-detail.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-xs-12" style="margin-bottom: 15px">
         <h3 class="panel-title">
-          <strong style="font-size: 1.5em">{{ contact.name }}</strong>
+          <strong style="font-size: 1.5em">{{ contact?.name }}</strong>
         </h3>
       </div>
     </div>
@@ -12,8 +12,8 @@
     <div class="row">
       <div class="col-xs-7">
         <img
-          [src]="contact.imageUrl"
-          alt="{{ contact.name }}"
+          [src]="contact?.imageUrl"
+          alt="{{ contact?.name }}"
           class="img-responsive"
           style="max-height: 100px; max-width: 100%"
         />
@@ -38,12 +38,12 @@
   <div class="panel-body">
     <div class="row">
       <div class="col-xs-12">
-      <h4><strong>Email: </strong>{{ contact.email }}</h4>
+      <h4><strong>Email: </strong>{{ contact?.email }}</h4>
       </div>
     </div>
     <div class="row">
       <div class="col-xs-12">
-      <h4><strong>Phone: </strong>{{ contact.phone }}</h4>
+      <h4><strong>Phone: </strong>{{ contact?.phone }}</h4>
       </div>
     </div>
   </div>
